# discord-weather-bot

./: Cargo.toml  README.md  Shuttle.toml
.github/workflows/: deploy.yml
src/: lib.rs  main.rs  weather.rs
