[package]
name = "weather-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-service = { version = "0.5.2", features = ["secrets", "bot-serenity"] }
sqlx = { version = "0.6.1", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
log = "0.4.17"
