[package]
name = "weather-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
anyhow = "1.0.62"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-secrets = "0.6.0"
shuttle-service = { version = "0.6.0", features = ["bot-serenity"] }
tracing = "0.1.35"
